# VisDrone_YOLO-RF-Detr

./: .dockerignore  .gitignore  .pylintrc  DATASET.md  Dockerfile  README-docker.md  README.md  README3dss.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt  setup_venv.ps1
.github/workflows/: build.yml
api/: __init__.py  engine.py  main.py
api/static/: index.html
models/: README.md
models/Yolo26/: README.md
models/rfdetr/: README.md  log.txt
models/rfdetr/evaluation_plots/: evaluation_metrics.json
scripts/: __init__.py  analyze_data.py  check_dataset.py  convert_visdrone_to_yolo.py  convert_yolo_to_coco.py  error_analysis.py  export_yolo26_onnx.py  inference.py  plot_rfdetr_metrics.py  run_test_on_testdev.py  run_test_suite.py  test_rfdetr.py  test_yolo26.py  train_rfdetr.py  train_yolo26.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_analyze_data.py
